<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/img"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="50sp"
        app:cardCornerRadius="30dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_details"
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:textColor="#088395"
                />
            <TextView
                android:id="@+id/patientName"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="@string/rohit"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:textColor="#088395"
                />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Age :"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
                <TextView
                    android:id="@+id/patientAge"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:text="18"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#FEA1A1"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="By Doctor :"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
                <TextView
                    android:id="@+id/doctor"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kunal"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="20sp"
        app:cardCornerRadius="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RESULT"
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#9DB2BF"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="SCORE"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="16sp"
                android:textColor="#088395"
                />
            <TextView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="DESCRIPTION"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="16sp"
                android:textColor="#088395"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="STAGE"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="16sp"
                android:textColor="#088395"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:background="#DDE6ED"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="30-26"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:text="normal"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="could be normal"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="25-20"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:text="mild"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="early"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="19-10"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:text="moderate"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="middle"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="9-0"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:text="severe"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="late"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="#088395"
                    />
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/button"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:onClick="restart"
        android:text="@string/test"
        android:textColor="#DDE6ED" />

</LinearLayout>